--- a/css/styles.scss
+++ b/css/styles.scss
@@ -532,10 +532,11 @@ body {
       //border: 2px solid red;
       .webdevTxt {
         font-size: 5rem;
+        font-weight: 600;
       }
 
       .mainP {
-        font-size: 3rem;
+        font-size: 3.5rem;
         line-height: 2;
       }
     }
@@ -560,7 +561,8 @@ body {
     height: 100vh;
     //border: 2px solid green;
     .devTools {
-      height: 100%;
+      height: 80%;
+      border: 2px solid red;
       //flex-direction: column;
       .mainTools,
       .supTools {
@@ -612,8 +614,8 @@ body {
       padding: 2rem;
       //border: 2px solid orange;
       background: #fff;
-      margin-top: 3rem;
-      margin-bottom: 3rem;
+      //margin-top: 3rem;
+      margin-bottom: 10rem;
       border-radius: 3rem;
 
       img {
