--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,11 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-size: 62.5%;
-  -ms-overflow-style: none;
-  /*  IE & Edge  */
-  scrollbar-width: none;
-  /*  firefox  */
+  -ms-overflow-style: none; /*  IE & Edge  */
+  scrollbar-width: none; /*  firefox  */
 }
-
 * ::-webkit-scrollbar {
   display: none;
 }
@@ -42,46 +38,29 @@ body {
   -webkit-backdrop-filter: blur(5px);
   opacity: 1;
 }
-
 .headerSection .naviLinks {
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   z-index: 999;
   width: 50%;
   height: 100vh;
   right: 0;
   text-align: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  justify-content: space-evenly;
   list-style: none;
-  background: #5b78c7;
+  background: rgb(91, 120, 199);
   opacity: 0;
   clip-path: circle(200px at 140% -5%);
   -webkit-clip-path: circle(200px at 140% -5%);
-  -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
 }
-
 .headerSection .naviLinks .navLi {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .headerSection .naviLinks .navLi a {
   cursor: pointer;
   font-size: 2.5rem;
@@ -90,66 +69,46 @@ body {
   text-decoration: none;
   color: #eceef4;
 }
-
 .headerSection .naviLinks .navLi a:hover {
   font-size: 4rem;
   font-weight: 800;
 }
-
 .headerSection .naviLinks.openNav {
   opacity: 1;
   clip-path: circle(2000px at 20% 10%);
   -webkit-clip-path: circle(2000px at 20% 10%);
-  -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
   pointer-events: all;
 }
-
 .headerSection .naviLinks.closeNav {
   clip-path: circle(100px at 90% -20%);
   -webkit-clip-path: circle(100px at 90% -20%);
-  -webkit-transition: all 0.8s ease-in;
   transition: all 0.8s ease-in;
   pointer-events: none;
 }
-
 .headerSection .navSection {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .headerSection .navSection ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  align-items: center;
+  flex: 1;
   list-style: none;
 }
-
 .headerSection .navSection ul .logo {
   font-size: 2.5rem;
   padding: 3rem;
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
 }
-
 .headerSection .navSection ul .navToggle {
   margin-left: auto;
   padding: 3rem;
   z-index: 999;
 }
-
 .headerSection .navSection ul .navToggle .toggleSvg {
   cursor: pointer;
 }
@@ -159,19 +118,12 @@ body {
   height: 100vh;
   background: #5b78c7;
   z-index: 99;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   opacity: 1;
   position: fixed;
 }
-
 .intro .introH1 {
   color: #fff;
   font-size: 10rem;
@@ -183,186 +135,110 @@ body {
   width: 100%;
   height: 100vh;
   background: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .mainSection .txtArea {
   background: #fff;
   width: 60%;
   height: 60%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
   font-family: "Open Sans", sans-serif;
 }
-
 .mainSection .txtArea .webdevTxt {
   font-size: 6rem;
+  font-weight: 600;
 }
-
 .mainSection .txtArea .mainP {
-  font-size: 6rem;
-  font-weight: 300;
+  font-size: 5rem;
   line-height: 1.2;
 }
 
 .aboutSection {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   background: #fff;
 }
-
 .aboutSection .box1 {
   width: 100%;
   height: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .aboutSection .box1 .aboutH1 {
   font-size: 6rem;
   font-family: "Open Sans", sans-serif;
-  color: #5b78c7;
+  color: #1c1d20;
 }
-
 .aboutSection .box2 {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .aboutSection .box2 .aboutP {
   text-align: center;
   font-size: 2.5rem;
   line-height: 2;
   font-family: "Poppins", sans-serif;
-  margin: 5%;
-  padding-bottom: 5%;
+  padding: 10rem;
 }
 
 .projectSection {
   background: #fff;
   width: 100vw;
   height: 60vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
-
 .projectSection .projectTxt {
   width: 100%;
 }
-
 .projectSection .projectTxt .projectH1 {
   padding: 2rem;
   font-size: 5rem;
   font-family: "Open Sans", sans-serif;
   text-align: center;
-  color: #5b78c7;
+  color: #1c1d20;
 }
-
 .projectSection .devTools {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
   padding: 2.5rem;
 }
-
 .projectSection .devTools .mainTools,
 .projectSection .devTools .supTools {
   width: 50%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
-
 .projectSection .devTools .mainTools .svgPack,
 .projectSection .devTools .supTools .svgPack {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .projectSection .devTools .mainTools .svgPack .toolsBundle,
 .projectSection .devTools .supTools .svgPack .toolsBundle {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   padding: 1.5rem;
   font-family: "Poppins", sans-serif;
 }
-
 .projectSection .devTools .mainTools .svgPack .toolsBundle p,
 .projectSection .devTools .supTools .svgPack .toolsBundle p {
   font-size: 2rem;
@@ -371,236 +247,160 @@ body {
 .projectTxt2 {
   width: 100%;
   height: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .projectTxt2 p {
   font-family: "Poppins", sans-serif;
-  margin: 5%;
+  padding: 10rem;
   font-size: 2.5rem;
   text-align: center;
 }
 
 .projectCards {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 100%;
 }
-
 .projectCards .left {
   width: 50%;
 }
-
 .projectCards .left .detailsWrapper {
   margin: auto;
   width: 80%;
 }
-
 .projectCards .left .detailsWrapper .cards {
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   padding: 2rem;
   text-align: start;
 }
-
 .projectCards .left .detailsWrapper .cards h1 {
   font-size: 3rem;
   font-family: "Open Sans", sans-serif;
   color: #5b78c7;
 }
-
 .projectCards .left .detailsWrapper .cards p {
   font-size: 2.5rem;
   line-height: 2;
   font-family: "Poppins", sans-serif;
   margin-right: 5%;
 }
-
 .projectCards .right {
   width: 50%;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
 }
-
 .projectCards .right .photos {
   width: 40vw;
   height: 40vw;
   background: #5b78c7;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   border-radius: 1rem;
   z-index: 20;
 }
-
 .projectCards .right .photos .photo {
   position: absolute;
-  width: 95%;
-  height: 95%;
+  width: 98%;
+  height: 98%;
 }
-
 .projectCards .right .photos .photo img {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
 }
 
+.projectCardMobile {
+  display: none;
+}
+
 .contactContainer {
   width: 100%;
   height: 60vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   background: #fff;
 }
-
 .contactContainer .txtBox {
-  width: 60%;
+  width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10rem;
 }
-
 .contactContainer .txtBox h1 {
   font-family: "Open Sans", sans-serif;
-  color: #5b78c7;
+  color: #1c1d20;
   font-size: 6rem;
   font-weight: 600;
   margin-bottom: 0.8rem;
 }
-
 .contactContainer .txtBox p {
   font-family: "Poppins", sans-serif;
   font-size: 2.5rem;
-  margin: 5%;
 }
 
 .footContainer {
   width: 100%;
   height: 40vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: #5b78c7;
-  -webkit-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
-
 .footContainer .footBox1 {
   width: 40%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .footContainer .footBox1 h1 {
   color: #fff;
   font-family: "Open Sans", sans-serif;
   font-size: 5rem;
   margin: 5%;
 }
-
 .footContainer .footBox1 p {
   color: #fff;
   font-size: 2rem;
   font-family: "Poppins", sans-serif;
 }
-
 .footContainer .footBox2 {
   width: 60%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-evenly;
 }
-
 .footContainer .footBox2 ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   color: #fff;
   font-family: "Poppins", sans-serif;
   text-align: center;
 }
-
 .footContainer .footBox2 ul .liTitle {
   font-size: 2rem;
   text-decoration: underline;
 }
-
 .footContainer .footBox2 ul li {
   list-style: none;
+}
+.footContainer .footBox2 ul li a {
+  text-decoration: none;
+  color: #fff;
   font-size: 2rem;
 }
 
@@ -632,10 +432,9 @@ body {
   }
   .mainSection .txtArea .webdevTxt {
     font-size: 5rem;
-    font-weight: 600;
   }
   .mainSection .txtArea .mainP {
-    font-size: 3.5rem;
+    font-size: 3rem;
     line-height: 2;
   }
   .aboutSection .box1 .aboutH1 {
@@ -650,7 +449,6 @@ body {
   }
   .projectSection .devTools {
     height: 80%;
-    border: 2px solid red;
   }
   .projectSection .devTools .mainTools,
   .projectSection .devTools .supTools {
@@ -659,10 +457,7 @@ body {
   }
   .projectSection .devTools .mainTools .svgPack,
   .projectSection .devTools .supTools .svgPack {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .projectTxt2 {
     width: 100vw;
@@ -682,19 +477,10 @@ body {
   .projectCardMobile {
     width: 100vw;
     height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     background: #5b78c7;
   }
   .projectCardMobile .mobileCards {
@@ -714,16 +500,9 @@ body {
     height: 50%;
     line-height: 2;
     text-align: left;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: center;
+    flex-direction: column;
     padding: 2rem;
   }
   .projectCardMobile .mobileCards .mCardTxt h1 {
@@ -740,26 +519,18 @@ body {
   }
   .contactContainer .txtBox {
     width: 100%;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    justify-content: space-evenly;
     padding: 3rem;
   }
   .footContainer {
     width: 100vw;
     height: 50vh;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .footContainer .footBox1 h1 {
     font-size: 4rem;
   }
   .footContainer .footBox2 {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
