--- a/css/styles.scss
+++ b/css/styles.scss
@@ -186,12 +186,12 @@ body {
     .webdevTxt {
       //if gsap scroll doesnt work then span outside of txtarea
       font-size: 6rem;
-      //font-weight: 600;
+      font-weight: 600;
     }
 
     .mainP {
-      font-size: 6rem;
-      font-weight: 300;
+      font-size: 5rem;
+      //font-weight: 300;
       line-height: 1.2;
     }
   }
@@ -217,7 +217,7 @@ body {
     .aboutH1 {
       font-size: 6rem;
       font-family: "Open Sans", sans-serif;
-      color: #5b78c7;
+      color: #1c1d20;
     }
   }
 
@@ -232,8 +232,8 @@ body {
       font-size: 2.5rem;
       line-height: 2;
       font-family: "Poppins", sans-serif;
-      margin: 5%;
-      padding-bottom: 5%;
+      padding: 10rem;
+
       //border: 2px solid red;
     }
   }
@@ -257,7 +257,7 @@ body {
       font-size: 5rem;
       font-family: "Open Sans", sans-serif;
       text-align: center;
-      color: #5b78c7;
+      color: #1c1d20;
     }
   }
 
@@ -315,7 +315,7 @@ body {
   //border: 2px solid red;
   p {
     font-family: "Poppins", sans-serif;
-    margin: 5%;
+    padding: 10rem;
     font-size: 2.5rem;
     text-align: center;
     //border: 2px solid green;
@@ -381,8 +381,8 @@ body {
 
       .photo {
         position: absolute;
-        width: 95%;
-        height: 95%;
+        width: 98%;
+        height: 98%;
         //border-radius: 1rem;
 
         img {
@@ -395,6 +395,10 @@ body {
   }
 }
 
+.projectCardMobile {
+  display: none;
+}
+
 .contactContainer {
   width: 100%;
   height: 60vh;
@@ -405,7 +409,7 @@ body {
   background: #fff;
 
   .txtBox {
-    width: 60%;
+    width: 100%;
     height: 100%;
     //margin: 2%;
     //border: 2px solid violet;
@@ -414,10 +418,11 @@ body {
     //align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 10rem;
 
     h1 {
       font-family: "Open Sans", sans-serif;
-      color: #5b78c7;
+      color: #1c1d20;
       font-size: 6rem;
       font-weight: 600;
       margin-bottom: 0.8rem;
@@ -426,7 +431,7 @@ body {
     p {
       font-family: "Poppins", sans-serif;
       font-size: 2.5rem;
-      margin: 5%;
+
       //margin-right: 5rem;
     }
   }
@@ -494,7 +499,11 @@ body {
       li {
         list-style: none;
 
-        font-size: 2rem;
+        a {
+          text-decoration: none;
+          color: #fff;
+          font-size: 2rem;
+        }
       }
     }
   }
@@ -532,11 +541,12 @@ body {
       //border: 2px solid red;
       .webdevTxt {
         font-size: 5rem;
-        font-weight: 600;
+        //text-align: center;
+        //font-weight: 600;
       }
 
       .mainP {
-        font-size: 3.5rem;
+        font-size: 3rem;
         line-height: 2;
       }
     }
@@ -562,7 +572,7 @@ body {
     //border: 2px solid green;
     .devTools {
       height: 80%;
-      border: 2px solid red;
+      //border: 2px solid red;
       //flex-direction: column;
       .mainTools,
       .supTools {
