--- a/css/styles.scss
+++ b/css/styles.scss
@@ -312,10 +312,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10rem;
   //border: 2px solid red;
   p {
     font-family: "Poppins", sans-serif;
-    padding: 10rem;
+    //padding: 10rem;
     font-size: 2.5rem;
     text-align: center;
     //border: 2px solid green;
