--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,12 +10,12 @@
   scrollbar-width: none; /*  firefox  */
 }
 
-body {
-  cursor: none;
-}
+//body {
+//  cursor: none;
+//}
 
 #circularcursor {
-  background: #5b78c7;
+  background: #04773b;
   border: 1px solid black;
   height: 30px;
   width: 30px;
@@ -53,7 +53,7 @@ body {
     text-align: center;
     justify-content: space-evenly;
     list-style: none;
-    background: rgb(91, 120, 199);
+    background: #151515;
     //border-radius: 16px;
     //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     //backdrop-filter: blur(5px);
@@ -71,6 +71,11 @@ body {
       align-items: center;
       justify-content: center;
 
+      &:hover {
+        //background: #2a3f7a;
+        background: #5b78c7;
+      }
+
       a {
         cursor: pointer;
         font-size: 2.5rem;
@@ -80,8 +85,10 @@ body {
         color: #eceef4;
 
         &:hover {
-          font-size: 4rem;
-          font-weight: 800;
+          //font-size: 4rem;
+          //font-weight: 800;
+          text-decoration: underline;
+          text-decoration-color: #fff;
           //font-style: italic;
         }
         //border: 2px solid red;
@@ -96,15 +103,6 @@ body {
     -webkit-clip-path: circle(2000px at 20% 10%);
     transition: all 0.5s ease-out;
     pointer-events: all;
-  }
-
-  .naviLinks.closeNav {
-    //opacity: 1;
-    clip-path: circle(100px at 90% -20%);
-    -webkit-clip-path: circle(100px at 90% -20%);
-    transition: all 0.8s ease-in; //fading menu
-    pointer-events: none;
-    //background: #eceef4;
   }
 
   .navSection {
@@ -124,7 +122,7 @@ body {
 
       .logo {
         font-size: 2.5rem;
-        padding: 3rem;
+        padding: 5rem;
         font-family: "Open Sans", sans-serif;
         font-weight: 700;
       }
@@ -132,11 +130,24 @@ body {
       .navToggle {
         //position: absolute;
         margin-left: auto;
-        padding: 3rem;
+        padding: 5rem;
         z-index: 999;
 
-        .toggleSvg {
+        .toggleSvgOpen,
+        .toggleSvgClose {
           cursor: pointer;
+        }
+
+        .toggleSvgOpen.svgOpen {
+          display: none;
+        }
+
+        .toggleSvgClose {
+          display: none;
+        }
+
+        .toggleSvgClose.closeSvg {
+          display: block;
         }
       }
     }
@@ -146,7 +157,7 @@ body {
 .intro {
   width: 100%;
   height: 100vh;
-  background: #5b78c7;
+  background: #151515;
   z-index: 99;
   display: flex;
   //display: none;
@@ -157,9 +168,10 @@ body {
 
   .introH1 {
     color: #fff;
-    font-size: 10rem;
+    font-size: 15rem;
     font-family: "Open Sans", Sans-serif;
     opacity: 0;
+    text-align: center;
   }
 }
 
@@ -215,9 +227,10 @@ body {
     //border: 2px solid peru;
 
     .aboutH1 {
-      font-size: 6rem;
+      font-size: 5rem;
       font-family: "Open Sans", sans-serif;
       color: #1c1d20;
+      padding: 1rem;
     }
   }
 
@@ -232,7 +245,7 @@ body {
       font-size: 2.5rem;
       line-height: 2;
       font-family: "Poppins", sans-serif;
-      padding: 10rem;
+      padding: 8rem;
 
       //border: 2px solid red;
     }
@@ -242,7 +255,7 @@ body {
 .projectSection {
   background: #fff;
   width: 100vw;
-  height: 60vh;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -250,6 +263,7 @@ body {
 
   .projectTxt {
     width: 100%;
+    height: auto;
     //border: 2px solid green;
 
     .projectH1 {
@@ -257,7 +271,7 @@ body {
       font-size: 5rem;
       font-family: "Open Sans", sans-serif;
       text-align: center;
-      color: #1c1d20;
+      //color: #1c1d20;
     }
   }
 
@@ -268,7 +282,7 @@ body {
     //flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding: 2.5rem;
+    // padding: 2.5rem;
     //border: 2px solid blue;
 
     .mainTools,
@@ -276,11 +290,11 @@ body {
       width: 50%;
       height: 100%;
       display: flex;
-      flex-wrap: wrap;
+      //flex-wrap: wrap;
       //flex-direction: column;
       justify-content: space-around;
       align-items: center;
-      //overflow-x: hidden;
+      //overflow: hidden;
       //padding: 1rem;
       //border: 2px solid green;
 
@@ -296,7 +310,7 @@ body {
           align-items: center;
           padding: 1.5rem;
           font-family: "Poppins", sans-serif;
-          //border: 1px solid red;
+          //border: 1px solid rgb(225, 0, 255);
           p {
             font-size: 2rem;
           }
@@ -307,12 +321,12 @@ body {
 }
 
 .projectTxt2 {
-  width: 100%;
-  height: 50%;
+  width: 100vw;
+  height: 40vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10rem;
+  padding: 8rem;
   //border: 2px solid red;
   p {
     font-family: "Poppins", sans-serif;
@@ -348,7 +362,7 @@ body {
         h1 {
           font-size: 3rem;
           font-family: "Open Sans", sans-serif;
-          color: #5b78c7;
+          color: #151515;
         }
 
         p {
@@ -372,7 +386,7 @@ body {
     .photos {
       width: 40vw;
       height: 40vw;
-      background: #5b78c7;
+      //background: #5b78c7;
       position: relative;
       display: flex;
       align-items: center;
@@ -423,7 +437,7 @@ body {
 
     h1 {
       font-family: "Open Sans", sans-serif;
-      color: #1c1d20;
+      //color: #1c1d20;
       font-size: 6rem;
       font-weight: 600;
       margin-bottom: 0.8rem;
@@ -446,8 +460,8 @@ body {
   //flex-direction: column;
   align-items: center;
   //justify-content: center;
-  background: #5b78c7;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  background: #151515;
+  //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
   .footBox1 {
     width: 40%;
@@ -456,12 +470,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     //border: 2px solid red;
     h1 {
       color: #fff;
       font-family: "Open Sans", sans-serif;
-      font-size: 5rem;
-      margin: 5%;
+      font-size: 4rem;
+      //margin-right: 5rem;
     }
 
     p {
@@ -493,7 +508,7 @@ body {
 
       .liTitle {
         // font-weight: 700;
-        font-size: 2rem;
+        font-size: 2.5rem;
         text-decoration: underline;
       }
 
@@ -504,6 +519,13 @@ body {
           text-decoration: none;
           color: #fff;
           font-size: 2rem;
+
+          &:hover {
+            color: #5b78c7;
+
+            text-decoration: underline;
+            text-decoration-color: #fff;
+          }
         }
       }
     }
@@ -525,7 +547,7 @@ body {
     width: 100vw;
     height: 100vh;
     .introH1 {
-      font-size: 8rem;
+      font-size: 10rem;
     }
   }
 
@@ -572,17 +594,21 @@ body {
     height: 100vh;
     //border: 2px solid green;
     .devTools {
-      height: 80%;
+      height: 100%;
       //border: 2px solid red;
       //flex-direction: column;
       .mainTools,
       .supTools {
         width: 50%;
-        height: 100%;
+        // height: 100%;
         //border: 2px solid red;
 
         .svgPack {
           flex-direction: column;
+
+          .toolsBundle {
+            overflow: hidden;
+          }
         }
       }
     }
@@ -590,18 +616,14 @@ body {
 
   .projectTxt2 {
     width: 100vw;
-    height: 40%;
+    height: 40vh;
     padding: 2.5rem;
-    background: #5b78c7;
-    color: #fff;
+    //background: #2a3f7a;
+    //color: #fff;
     //border: 2px solid red;
   }
 
   .projectCardSection {
-    width: 100vw;
-    height: 100vh;
-    //display: none;
-    //border: 2px solid red;
     display: none;
 
     .projectCards {
@@ -617,13 +639,13 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background: #5b78c7;
+    //background: #151515;
 
     .mobileCards {
       width: 100%;
       height: 100%;
       padding: 2rem;
-      //border: 2px solid orange;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       background: #fff;
       //margin-top: 3rem;
       margin-bottom: 10rem;
@@ -648,7 +670,7 @@ body {
         h1 {
           font-size: 3rem;
           font-family: "Open Sans", sans-serif;
-          color: #5b78c7;
+          //color: #;
         }
 
         p {
@@ -673,13 +695,8 @@ body {
     width: 100vw;
     height: 50vh;
     flex-direction: column;
-    //justify-content: ;
 
-    .footBox1 {
-      h1 {
-        font-size: 4rem;
-      }
-    }
+    //justify-content: ;
 
     .footBox2 {
       justify-content: space-between;
