--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,9 +9,9 @@
   -ms-overflow-style: none; /*  IE & Edge  */
   scrollbar-width: none; /*  firefox  */
 }
-
 //body {
-//  cursor: none;
+//color: #fff;
+//background: #080f0f;
 //}
 
 #circularcursor {
@@ -121,7 +121,7 @@
       //border: 2px solid blue;
 
       .logo {
-        font-size: 2.5rem;
+        font-size: 2rem;
         padding: 5rem;
         font-family: "Open Sans", sans-serif;
         font-weight: 700;
@@ -132,6 +132,13 @@
         margin-left: auto;
         padding: 5rem;
         z-index: 999;
+
+        .toggleSvgOpen {
+          font-size: 2rem;
+          //padding: 2rem;
+          font-family: "Open Sans", sans-serif;
+          font-weight: 600;
+        }
 
         .toggleSvgOpen,
         .toggleSvgClose {
@@ -157,7 +164,7 @@
 .intro {
   width: 100%;
   height: 100vh;
-  background: #151515;
+  background: #080f0f;
   z-index: 99;
   display: flex;
   //display: none;
@@ -290,7 +297,7 @@
       width: 50%;
       height: 100%;
       display: flex;
-      //flex-wrap: wrap;
+      flex-wrap: wrap;
       //flex-direction: column;
       justify-content: space-around;
       align-items: center;
@@ -362,7 +369,7 @@
         h1 {
           font-size: 3rem;
           font-family: "Open Sans", sans-serif;
-          color: #151515;
+          //color: #151515;
         }
 
         p {
@@ -460,7 +467,7 @@
   //flex-direction: column;
   align-items: center;
   //justify-content: center;
-  background: #151515;
+  background: #080f0f;
   //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
   .footBox1 {
@@ -591,11 +598,11 @@
   }
 
   .projectSection {
-    height: 100vh;
+    height: 80vh;
     //border: 2px solid green;
     .devTools {
       height: 100%;
-      //border: 2px solid red;
+      // border: 2px solid red;
       //flex-direction: column;
       .mainTools,
       .supTools {
@@ -620,7 +627,7 @@
     padding: 2.5rem;
     //background: #2a3f7a;
     //color: #fff;
-    //border: 2px solid red;
+    // border: 2px solid red;
   }
 
   .projectCardSection {
