--- a/css/styles.scss
+++ b/css/styles.scss
@@ -185,7 +185,7 @@
 .mainSection {
   width: 100%;
   height: 100vh;
-  //border: 2px solid blue;
+  border: 2px solid blue;
   background: #fff;
   display: flex;
   flex-direction: column;
@@ -194,7 +194,7 @@
 
   .txtContainer {
     width: 100%;
-    height: 85%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -383,6 +383,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   padding: 8rem;
   //border: 1px solid blue;
   h1 {
@@ -395,7 +396,7 @@
     //padding: 10rem;
     line-height: 2;
     font-size: 2rem;
-    text-align: center;
+
     //border: 2px solid green;
   }
 }
@@ -698,6 +699,7 @@
     .box1 {
       .aboutH1 {
         text-align: center;
+        padding: 2rem;
       }
     }
 
@@ -732,7 +734,7 @@
         //flex-wrap: wrap;
         .svgPack {
           //border: 1px solid red;
-          width: 70%;
+          width: 60%;
           //flex-direction: column;
           flex-wrap: wrap;
         }
