--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,6 @@
 .mainSection {
   width: 100%;
   height: 100vh;
-  border: 2px solid blue;
   background: #fff;
   display: flex;
   flex-direction: column;
@@ -174,19 +173,6 @@
 .mainSection .txtContainer .txtArea .mainP {
   font-size: 5rem;
   line-height: 1.5;
-}
-.mainSection .arrowContainer {
-  display: none;
-  width: 100%;
-  height: 15%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.mainSection .arrowContainer .arrow {
-  margin: 5rem;
-  opacity: 1;
-  display: none;
 }
 
 .aboutSection {
@@ -344,23 +330,21 @@
   margin-right: 5%;
 }
 .projectCards .left .detailsWrapper .cards .cardBtns {
-  width: 15rem;
-  height: 5rem;
-  background: rgba(255, 255, 255, 0.41);
-  border-radius: 16px;
+  width: 10rem;
+  height: 4rem;
+  background: #080f0f;
+  color: #fff;
+  border-radius: 1rem;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Poppins", sans-serif;
   margin-top: 2rem;
-  opacity: 0.5;
 }
 .projectCards .left .detailsWrapper .cards .cardBtns:hover {
-  color: #fff;
   background: #5b78c7;
-  opacity: 1;
   cursor: pointer;
 }
 .projectCards .right {
@@ -520,7 +504,7 @@
     height: 100vh;
   }
   .mainSection .txtContainer .txtArea {
-    width: 80%;
+    width: 100%;
   }
   .mainSection .txtContainer .txtArea .webdevTxt {
     font-size: 5rem;
@@ -573,8 +557,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
   }
   .projectCardMobile .mobileCards {
     width: 100%;
@@ -593,10 +575,11 @@
     width: 100%;
     height: 50%;
     line-height: 2;
-    text-align: left;
+    text-align: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     padding: 2rem;
   }
   .projectCardMobile .mobileCards .mCardTxt h1 {
@@ -608,22 +591,18 @@
     font-family: "Poppins", sans-serif;
   }
   .projectCardMobile .mobileCards .mCardTxt .cardBtns {
-    width: 15rem;
-    height: 5rem;
+    width: 10rem;
+    height: 4rem;
     border: none;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
     border-radius: 1rem;
-    background: #fff;
+    background: #080f0f;
+    color: #fff;
     font-size: 2rem;
     font-family: "Poppins", sans-serif;
     margin-top: 2rem;
-    opacity: 0.5;
   }
   .projectCardMobile .mobileCards .mCardTxt .cardBtns:hover {
-    color: #fff;
     background: #5b78c7;
-    opacity: 1;
     cursor: pointer;
   }
   .contactContainer {
