--- a/css/styles.scss
+++ b/css/styles.scss
@@ -185,7 +185,7 @@
 .mainSection {
   width: 100%;
   height: 100vh;
-  border: 2px solid blue;
+  //border: 2px solid blue;
   background: #fff;
   display: flex;
   flex-direction: column;
@@ -213,6 +213,7 @@
       .webdevTxt {
         //if gsap scroll doesnt work then span outside of txtarea
         font-size: 6rem;
+        //text-decoration: underline;
         //font-weight: 600;
         //border: 1px solid green;
       }
@@ -222,22 +223,6 @@
         //font-weight: 300;
         line-height: 1.5;
       }
-    }
-  }
-
-  .arrowContainer {
-    display: none;
-    //will come back to this later
-    width: 100%;
-    height: 15%;
-    //border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .arrow {
-      margin: 5rem;
-      opacity: 1;
-      display: none;
     }
   }
 }
@@ -437,23 +422,23 @@
         }
 
         .cardBtns {
-          width: 15rem;
-          height: 5rem;
-          background: rgba(255, 255, 255, 0.41);
-          border-radius: 16px;
+          width: 10rem;
+          height: 4rem;
+          background: #080f0f;
+          color: #fff;
+          border-radius: 1rem;
           box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
           backdrop-filter: blur(5px);
           -webkit-backdrop-filter: blur(5px);
           border: 1px solid rgba(255, 255, 255, 0.3);
-          font-size: 2rem;
+          font-size: 1.5rem;
           font-family: "Poppins", sans-serif;
           margin-top: 2rem;
-          opacity: 0.5;
 
           &:hover {
-            color: #fff;
+            //color: #fff;
             background: #5b78c7;
-            opacity: 1;
+            //opacity: 1;
             cursor: pointer;
           }
         }
@@ -670,15 +655,9 @@
     //border: 2px solid #5b78c7;
 
     .txtContainer {
-      //width: 60%;
-      //height: 60%;
-      //padding: 3rem;
-      //line-height: 2;
-      //border: 2px solid red;
-
       .txtArea {
         //border: 1px solid green;
-        width: 80%;
+        width: 100%;
 
         .webdevTxt {
           font-size: 5rem;
@@ -765,8 +744,8 @@
     //border: 2px solid green;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    //justify-content: center;
+    //align-items: center;
     //background: #151515;
 
     .mobileCards {
@@ -778,6 +757,7 @@
       //margin-top: 3rem;
       margin-bottom: 10rem;
       border-radius: 3rem;
+      //align-items: center;
 
       img {
         width: 100%;
@@ -788,10 +768,11 @@
         width: 100%;
         height: 50%;
         line-height: 2;
-        text-align: left;
+        text-align: center;
         display: flex;
         justify-content: center;
         flex-direction: column;
+        align-items: center;
         //border: 2px solid lightblue;
         padding: 2rem;
 
@@ -807,23 +788,22 @@
         }
 
         .cardBtns {
-          width: 15rem;
-          height: 5rem;
+          width: 10rem;
+          height: 4rem;
           border: none;
-          border-left: 1px solid black;
-          border-right: 1px solid black;
           border-radius: 1rem;
           //box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
-          background: #fff;
+          background: #080f0f;
+          color: #fff;
           font-size: 2rem;
           font-family: "Poppins", sans-serif;
           margin-top: 2rem;
-          opacity: 0.5;
+          //opacity: 0.5;
 
           &:hover {
-            color: #fff;
+            //color: #fff;
             background: #5b78c7;
-            opacity: 1;
+            //opacity: 1;
             cursor: pointer;
           }
         }
